# CYOAG

./: LICENSE  README.md  demo.py  devtools.py  game.py  items.json  items.py  player.py  pyproject.toml  rooms.json  rooms.py  scenes.py
.github/workflows/: ci.yml
source/cyoag/: __init__.py  choice.py  command_processor.py  data_loader.py  data_models.py  data_types.py  devtools.py  event_manager.py  game.py  game_data.py  input.py  item.py  manager.py  narrator.py  player.py  rooms.py  scenes.py  theme.py
source/cyoag/data/: choices.json  events.json  items.json  meta.json  rooms.json  skins.json
